Made the header part in index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,33 @@
     <link rel="stylesheet" href="./assets/built/main.css">
     <title>AspIT | Fokuseret talent til erhverslivet</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <section class="header__nav">
+            <h1 class="header__logo"><img src="./assets/img/logo.png" alt="AspIT logo"></h1>
+
+            <nav class="header__navigation">
+                <ul>
+                    <li class="header__navigation header__navigation-item"><a href="#">Om AspIT</a></li>
+                    <li class="header__navigation header__navigation-item"><a href="#">Om AspIT</a></li>
+                    <li class="header__navigation header__navigation-item"><a href="#">Om AspIT</a></li>
+                    <li class="header__navigation header__navigation-item"><img src="./assets/img/svg/ios-search.svg"
+                            alt="Search"></li>
+                </ul>
+            </nav>
+        </section>
+
+        <section class="header__hero">
+            <h1 class="header__hero-title">AspIT / Fokuseret talent til erhverslivet</h1>
+            <p class="header__hero-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem soluta, fugiat earum quaerat beatae
+                nobis est eaque voluptatem sint, praesentium minus fugit aperiam mollitia corrupti voluptatibus pariatur
+                omnis sed eum!
+            </p>
+            <a class="header__hero-contact" href="#">Kontakt os</a>
+        </section>
+    </header>
 </body>
+
 </html>
