Made the navigation and set font sizes

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             <h1 class="header__logo"><img src="./assets/img/logo.png" alt="AspIT logo"></h1>
 
             <nav class="header__navigation">
-                <ul>
+                <ul class="header__navigation header__navigation-items">
                     <li class="header__navigation header__navigation-item"><a href="#">Om AspIT</a></li>
-                    <li class="header__navigation header__navigation-item"><a href="#">Om AspIT</a></li>
-                    <li class="header__navigation header__navigation-item"><a href="#">Om AspIT</a></li>
-                    <li class="header__navigation header__navigation-item"><img src="./assets/img/svg/ios-search.svg"
-                            alt="Search"></li>
+                    <li class="header__navigation header__navigation-item"><a href="#">Nyheder</a></li>
+                    <li class="header__navigation header__navigation-item"><a href="#">Kontakt</a></li>
+                    <li class="header__navigation header__navigation-item"><img src="./assets/img/svg/ios-search.svg" alt="Search"></li>
                 </ul>
             </nav>
         </section>
