Made the about section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                     <li class="header__navigation header__navigation-item"><a href="#">Om AspIT</a></li>
                     <li class="header__navigation header__navigation-item"><a href="#">Nyheder</a></li>
                     <li class="header__navigation header__navigation-item"><a href="#">Kontakt</a></li>
-                    <li class="header__navigation header__navigation-item"><img src="./assets/img/svg/ios-search.svg" alt="Search"></li>
+                    <li class="header__navigation header__navigation-item"><img src="./assets/img/svg/ios-search.svg"
+                            alt="Search"></li>
                 </ul>
             </nav>
         </section>
@@ -35,6 +36,59 @@
             <a class="header__hero-contact" href="#">Kontakt os</a>
         </section>
     </header>
+
+    <main>
+        <section class="about">
+            <h2 class="about__title">Om AspIT</h2>
+
+            <div class="about__boxes">
+                <div class="about__afklaring">
+                    <img src="./assets/img/afklaring.jpg" alt="Afklaring">
+                    <h3 class="about__afklaring about__afklaring-title">Afklaring</h3>
+                    <p class="about__afklaring about__afklaring-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur cumque, consequuntur eaque
+                        doloremque quisquam ratione ducimus, fuga pariatur eos repellendus ea esse? Aperiam quisquam,
+                        aliquam enim impedit voluptates.
+                    </p>
+                    <p class="about__afklaring about__afklaring-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nostrum magni consequuntur
+                        consectetur laboriosam itaque. Ex quod sit consequatur aliquam.
+                    </p>
+                    <a class="about__afklaring about__afklaring-link" href="#">Se mere >></a>
+                </div>
+
+                <div class="about__uddannelsen">
+                    <img src="./assets/img/undervisning.jpg" alt="Uddannelsen">
+                    <h3 class="about__uddannelsen about__uddannelsen-title">Uddannelsen</h3>
+                    <p class="about__afklaring about__afklaring-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur cumque, consequuntur eaque
+                        doloremque quisquam ratione ducimus, fuga pariatur eos repellendus ea esse? Aperiam quisquam,
+                        aliquam enim impedit voluptates.
+                    </p>
+                    <p class="about__afklaring about__afklaring-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nostrum magni consequuntur
+                        consectetur laboriosam itaque. Ex quod sit consequatur aliquam.
+                    </p>
+                    <a class="about__uddannelsen about__uddannelsen-link" href="#">Se mere >></a>
+                </div>
+
+                <div class="about__praktik">
+                    <img src="./assets/img/arbejde.jpg" alt="Praktik">
+                    <h3 class="about__praktik about__praktik-title">Praktik</h3>
+                    <p class="about__afklaring about__afklaring-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur cumque, consequuntur eaque
+                        doloremque quisquam ratione ducimus, fuga pariatur eos repellendus ea esse? Aperiam quisquam,
+                        aliquam enim impedit voluptates.
+                    </p>
+                    <p class="about__afklaring about__afklaring-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nostrum magni consequuntur
+                        consectetur laboriosam itaque. Ex quod sit consequatur aliquam.
+                    </p>
+                    <a class="about__praktik about__praktik-link" href="#">Se mere >></a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
