Made the about chef section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@
                 </div>
             </div>
         </section>
+
+        <section class="about-chef">
+            <div class="about-chef__left">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum qui suscipit consequatur, nesciunt
+                    voluptatibus vel perferendis, minus dolorum hic enim deserunt ut voluptate.
+                </p>
+                <p>Ole Bay Jensen, Uddannelseschef</p>
+            </div>
+
+            <div class="about-chef__right">
+                <img src="./assets/img/ole_bay_jensen.jpg" alt="Ole Bay Jensen">
+            </div>
+        </section>
     </main>
 </body>
 
