Started to make the news section

--- a/index.html
+++ b/index.html
@@ -102,6 +102,53 @@
                 <img src="./assets/img/ole_bay_jensen.jpg" alt="Ole Bay Jensen">
             </div>
         </section>
+
+        <section class="news">
+            <h2 class="news__title">Nyheder</h2>
+
+            <div class="news__boxes">
+                <div class="news__1">
+                    <img src="./assets/img/nyheder/cowi.png" alt="Samfundsøkonomisk analyse af AspIT">
+                    <h3>Samfundsøkonomisk analyse af AspIT</h3>
+                </div>
+
+                <div class="news__2">
+                    <img src="./assets/img/nyheder/elev_alene_i_amterdam.jpg" alt="Studieophold i Amsterdam">
+                    <h3>Elev alene på Studieophold i Amsterdam</h3>
+                </div>
+
+                <div class="news__3">
+                    <img src="./assets/img/nyheder/aspitskolernesdak.PNG" alt="AspIT skolernes dag">
+                    <h3>Husk AspIT skolernes dag den 2. september</h3>
+                </div>
+
+                <div class="news__4">
+                    <img src="./assets/img/nyheder/hmmm.PNG" alt="Erhvervsleder melder klart ud">
+                    <h3>Erhvervsleder melder klart ud</h3>
+                </div>
+
+                <div class="news__5">
+                    <img src="./assets/img/nyheder/csis.jpg" alt="CSIS">
+                    <h3>CSIS indstillet til årets AspIT pris</h3>
+                </div>
+                
+                <div class="news__subscribe">
+                    <h3>Tilmeld nyhedsbrev</h3>
+                    <p>Få nyheder fra AspIT direkte i din indbakke</p>
+                    
+                    <input class="news__subscribe__name" type="text" placeholder="Navn">
+                    <input class="news__subscribe__email" type="email" placeholder="Email">
+                    <button class="news__subscribe__button">Tilmeld</button>
+                </div>
+
+                <div class="news__social">
+                    <img src="./assets/img/icons/facebook.png" alt="Facebook">
+                    <img src="./assets/img/icons/linkedin.png" alt="Linkedin">
+                </div>
+
+                <a class="news__link" href="#">Se flere nyheder >></a>
+            </div>
+        </section>
     </main>
 </body>
 
