Changed button hover effect a bit

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 nobis est eaque voluptatem sint, praesentium minus fugit aperiam mollitia corrupti voluptatibus pariatur
                 omnis sed eum!
             </p>
-            <a class="header__hero-contact" href="#">Kontakt os</a>
+            <a class="button header__hero-contact" href="#">Kontakt os</a>
         </section>
     </header>
 
@@ -138,7 +138,7 @@
                     
                     <input class="news__subscribe__name" type="text" placeholder="Navn">
                     <input class="news__subscribe__email" type="email" placeholder="Email">
-                    <button class="news__subscribe__button">Tilmeld</button>
+                    <button class="button news__subscribe__button">Tilmeld</button>
                 </div>
 
                 <div class="news__social">
