Fixing news section for phone

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
                 
                 <div class="news__subscribe">
-                    <h3>Tilmeld nyhedsbrev</h3>
+                    <h3 class="news__subscribe__title">Tilmeld nyhedsbrev</h3>
                     <p>Få nyheder fra AspIT direkte i din indbakke</p>
                     
                     <input class="news__subscribe__name" type="text" placeholder="Navn">
