All buttons and links now use the button scss file

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nostrum magni consequuntur
                         consectetur laboriosam itaque. Ex quod sit consequatur aliquam.
                     </p>
-                    <a class="about__afklaring about__afklaring-link" href="#">Se mere >></a>
+                    <a class="button2 about__afklaring about__afklaring-link" href="#">Se mere >></a>
                 </div>
 
                 <div class="about__uddannelsen">
@@ -69,7 +69,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nostrum magni consequuntur
                         consectetur laboriosam itaque. Ex quod sit consequatur aliquam.
                     </p>
-                    <a class="about__uddannelsen about__uddannelsen-link" href="#">Se mere >></a>
+                    <a class="button2 about__uddannelsen about__uddannelsen-link" href="#">Se mere >></a>
                 </div>
 
                 <div class="about__praktik">
@@ -84,7 +84,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nostrum magni consequuntur
                         consectetur laboriosam itaque. Ex quod sit consequatur aliquam.
                     </p>
-                    <a class="about__praktik about__praktik-link" href="#">Se mere >></a>
+                    <a class="button2 about__praktik about__praktik-link" href="#">Se mere >></a>
                 </div>
             </div>
         </section>
@@ -146,7 +146,7 @@
                     <img src="./assets/img/icons/linkedin.png" alt="Linkedin">
                 </div>
 
-                <a class="news__link" href="#">Se flere nyheder >></a>
+                <a class="button2 news__link" href="#">Se flere nyheder >></a>
             </div>
         </section>
     </main>
