Finished news and contact section

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 
                 <div class="news__subscribe">
                     <h3 class="news__subscribe__title">Tilmeld nyhedsbrev</h3>
-                    <p>Få nyheder fra AspIT direkte i din indbakke</p>
+                    <p class="news__subscribe__text">Få nyheder fra AspIT direkte i din indbakke</p>
                     
                     <input class="news__subscribe__name" type="text" placeholder="Navn">
                     <input class="news__subscribe__email" type="email" placeholder="Email">
@@ -147,6 +147,23 @@
                 </div>
 
                 <a class="button2 news__link" href="#">Se flere nyheder >></a>
+            </div>
+        </section>
+
+        <section class="contact">
+            <div class="contact__form">
+                <h3 class="contact__form__title">Kontakt AspIT</h3>
+                <p class="contact__form__text">Vælg en afdeling og send os en besked</p>
+
+                <input class="contact__form__name" type="text" placeholder="Navn">
+                <input class="contact__form__email" type="email" placeholder="Email">
+                <textarea class="contact__form__message" placeholder="Besked"></textarea>
+
+                <button class="button contact__form__send">Send mail</button>
+            </div>
+
+            <div class="contact__map">
+                <img class="contact__map__locations" src="./assets/img/kort.png" alt="AspIT lokationer">
             </div>
         </section>
     </main>
