Made the gallary and footer

--- a/index.html
+++ b/index.html
@@ -16,24 +16,23 @@
             <h1 class="header__logo"><img src="./assets/img/logo.png" alt="AspIT logo"></h1>
 
             <nav class="header__navigation">
-                <ul class="header__navigation header__navigation-items">
-                    <li class="header__navigation header__navigation-item"><a href="#">Om AspIT</a></li>
-                    <li class="header__navigation header__navigation-item"><a href="#">Nyheder</a></li>
-                    <li class="header__navigation header__navigation-item"><a href="#">Kontakt</a></li>
-                    <li class="header__navigation header__navigation-item"><img src="./assets/img/svg/ios-search.svg"
-                            alt="Search"></li>
+                <ul class="header__navigation header__navigation__items">
+                    <li class="header__navigation header__navigation__item"><a href="#">Om AspIT</a></li>
+                    <li class="header__navigation header__navigation__item"><a href="#">Nyheder</a></li>
+                    <li class="header__navigation header__navigation__item"><a href="#">Kontakt</a></li>
+                    <li class="header__navigation header__navigation__item"><img src="./assets/img/svg/ios-search.svg" alt="Search"></li>
                 </ul>
             </nav>
         </section>
 
         <section class="header__hero">
-            <h1 class="header__hero-title">AspIT / Fokuseret talent til erhverslivet</h1>
-            <p class="header__hero-text">
+            <h1 class="header__hero__title">AspIT / Fokuseret talent til erhverslivet</h1>
+            <p class="header__hero__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem soluta, fugiat earum quaerat beatae
                 nobis est eaque voluptatem sint, praesentium minus fugit aperiam mollitia corrupti voluptatibus pariatur
                 omnis sed eum!
             </p>
-            <a class="button header__hero-contact" href="#">Kontakt os</a>
+            <a class="button header__hero__contact" href="#">Kontakt os</a>
         </section>
     </header>
 
@@ -166,7 +165,23 @@
                 <img class="contact__map__locations" src="./assets/img/kort.png" alt="AspIT lokationer">
             </div>
         </section>
+
+        <section class="gallery">
+            <div><img src="./assets/img/gallery/1.jpg" alt="AspIT galleri billede 1"></div>
+            <div><img src="./assets/img/gallery/2.jpg" alt="AspIT galleri billede 2"></div>
+            <div><img src="./assets/img/gallery/3.jpg" alt="AspIT galleri billede 3"></div>
+            <div><img src="./assets/img/gallery/4.jpg" alt="AspIT galleri billede 4"></div>
+            <div><img src="./assets/img/gallery/5.jpg" alt="AspIT galleri billede 5"></div>
+            <div><img src="./assets/img/gallery/6.jpg" alt="AspIT galleri billede 6"></div>
+            <div><img src="./assets/img/gallery/7.jpg" alt="AspIT galleri billede 7"></div>
+            <div><img src="./assets/img/gallery/8.jpg" alt="AspIT galleri billede 8"></div>
+            <div><img src="./assets/img/gallery/9.jpg" alt="AspIT galleri billede 9"></div>
+        </section>
     </main>
+
+    <footer class="footer">
+        <p class="footer__text">copyright 2018 - ligebanan</p>
+    </footer>
 </body>
 
 </html>
