Changed gallert a tiny bit

--- a/index.html
+++ b/index.html
@@ -167,15 +167,15 @@
         </section>
 
         <section class="gallery">
-            <div><img src="./assets/img/gallery/1.jpg" alt="AspIT galleri billede 1"></div>
-            <div><img src="./assets/img/gallery/2.jpg" alt="AspIT galleri billede 2"></div>
-            <div><img src="./assets/img/gallery/3.jpg" alt="AspIT galleri billede 3"></div>
-            <div><img src="./assets/img/gallery/4.jpg" alt="AspIT galleri billede 4"></div>
-            <div><img src="./assets/img/gallery/5.jpg" alt="AspIT galleri billede 5"></div>
-            <div><img src="./assets/img/gallery/6.jpg" alt="AspIT galleri billede 6"></div>
-            <div><img src="./assets/img/gallery/7.jpg" alt="AspIT galleri billede 7"></div>
-            <div><img src="./assets/img/gallery/8.jpg" alt="AspIT galleri billede 8"></div>
-            <div><img src="./assets/img/gallery/9.jpg" alt="AspIT galleri billede 9"></div>
+            <img src="./assets/img/gallery/1.jpg" alt="AspIT galleri billede 1">
+            <img src="./assets/img/gallery/2.jpg" alt="AspIT galleri billede 2">
+            <img src="./assets/img/gallery/3.jpg" alt="AspIT galleri billede 3">
+            <img src="./assets/img/gallery/4.jpg" alt="AspIT galleri billede 4">
+            <img src="./assets/img/gallery/5.jpg" alt="AspIT galleri billede 5">
+            <img src="./assets/img/gallery/6.jpg" alt="AspIT galleri billede 6">
+            <img src="./assets/img/gallery/7.jpg" alt="AspIT galleri billede 7">
+            <img src="./assets/img/gallery/8.jpg" alt="AspIT galleri billede 8">
+            <img src="./assets/img/gallery/9.jpg" alt="AspIT galleri billede 9">
         </section>
     </main>
 
